# ai-teacher-engine

./: .gitignore  PROGRESS.md  main.py  pyproject.toml
agent/: graph.py  state.py
configs/: settings.py
models/: request_models.py  response_models.py
routers/: exam_router.py
services/: groq_service.py
